<resources>
    <string name="app_name">PlayAndroid</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="password_again">确认密码</string>
    <string name="home">首页</string>
    <string name="project">项目</string>
    <string name="system">体系</string>
    <string name="navigation">导航</string>
    <string name="backslash"> / </string>
    <string name="bottom_navigation_view_behavior">io.github.zeleven.playa.ui.widget.BottomNavigationViewBehavior</string>
    <string name="uninterested">不感兴趣</string>
    <string name="account">账号</string>
    <string name="repassword">确认密码</string>
    <string name="login_cn">登 录</string>
    <string name="login_en">Login</string>
    <string name="register_cn">注 册</string>
    <string name="register_en">Register</string>
    <string name="copy_link">复制链接</string>
    <string name="use_system_browser_open">用系统浏览器打开</string>
    <string name="collection">收藏</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="menu_item_search">搜索</string>
    <string name="hot_search_title">玩安卓热搜</string>
    <string name="search_history_title">搜索历史</string>
    <string name="clear_history_alert_dialog_message">要清除所有搜索记录吗？</string>
    <string name="dialog_button_ok">是的</string>
    <string name="dialog_button_cancel">取消</string>
    <string name="search_view_hint">输入关键词进行搜索</string>
</resources>
