<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--android:icon="@drawable/selector_home"-->
    <!--android:icon="@drawable/selector_project"-->
    <!--  android:icon="@drawable/selector_system"-->
    <!--android:icon="@drawable/selector_navigation"-->
    <item
        android:icon="@drawable/selector_home"
        android:id="@+id/it_home"
        android:title="@string/home"/>
    <item
        android:icon="@drawable/selector_project"
        android:id="@+id/it_project"
        android:title="@string/project"/>
    <item
        android:icon="@drawable/selector_system"
        android:id="@+id/it_system"
        android:title="@string/system"/>
    <item
        android:icon="@drawable/selector_navigation"
        android:id="@+id/it_nav"
        android:title="@string/navigation"/>
</menu>