<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="example.com.playandroid.content.register.RegisterModel"/>

        <variable
            name="entity"
            type="example.com.playandroid.content.register.RegisterEntity"/>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#0081f9"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="玩安卓"/>
        <LinearLayout
            android:gravity="center"
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--app:errorEnabled="true"-->
            <!-- app:counterOverflowTextAppearance="@style/style_input_error"-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHint="@color/little_black"
                android:textSize="16sp"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:counterMaxLength="11"
                app:errorTextAppearance="@style/style_input_error"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/style_input_hint">

                <android.support.design.widget.TextInputEditText
                    android:text="@={entity.username}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="14dp"
                    android:textColor="@color/black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/little_black"
                android:textSize="16sp"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/style_input_error"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/style_input_hint"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:text="@={entity.password}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_again"
                android:textColorHint="@color/little_black"
                android:textSize="16sp"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/style_input_error"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/style_input_hint"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:text="@={entity.repassword}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:onClick="@{vm::onRegisterClick}"
                android:text="注册"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</layout>