<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="vm"
            type="example.com.playandroid.content.register.LoginModel"/>
        <variable
            name="entity"
            type="example.com.playandroid.content.register.UserEntity"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="220dp">
            <!--   android:fitsSystemWindows="true"-->
            <!--app:contentScrim 下拉的时候标题栏或者说是toolbar的填充的颜色-->
            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/ripple_white_small"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/ic_back_24dp"/>

                <FrameLayout
                    android:id="@+id/fl_title"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/title_ch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center_horizontal"
                        android:text="@{vm.isChange?@string/login_cn:@string/register_cn,default=Login}"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/title_en"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:text="@{vm.isChange?@string/login_en:@string/register_en,default=login}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@android:color/white"/>
                </FrameLayout>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <ProgressBar
            style="?android:progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.design.widget.TextInputLayout
                style="@style/style_login_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_username"
                    android:afterTextChanged="@{vm::userAfterTextChanged}"
                    android:text="@={entity.username}"
                    style="@style/style_login_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/style_login_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_password"
                    android:afterTextChanged="@{vm::passwordAfterTextChanged}"
                    android:text="@={entity.password}"
                    style="@style/style_login_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/style_login_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{vm.isChange?View.GONE:View.VISIBLE}"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_confirm_password"
                    android:afterTextChanged="@{vm::repasswordAfterTextChanged}"
                    android:text="@={entity.repassword}"
                    style="@style/style_login_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repassword"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:onClick="@{vm::onRegisterOrLoginClick}"
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_round"
                android:text="@{vm.isChange?@string/login_cn:@string/register_cn}"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
        </LinearLayout>

        <!--android:src="@drawable/ic_switch"-->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="@{vm::onFABClick}"
            android:src="@drawable/ic_switch"
            app:fabSize="normal"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"/>
    </android.support.design.widget.CoordinatorLayout>
</layout>